<resources>
    <string name="app_name">Lectura App</string>
    <string name="login_forgot_pw">¿Olvidaste tu contraseña?</string>
    <string name="login_remember_pw">Recordar usuario</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="confirmar_pass">Repetir contraseña</string>
    <string name="next">Siguiente</string>
    <string name="ready">Listo</string>
    <string name="name">Nombre</string>

    <string name="sports">Deportes</string>
    <string name="animals">Animales</string>
    <string name="magic">Magia</string>
    <string name="videogames">Videojuegos</string>
    <string name="music">Musica</string>
    <string name="space">Espacio</string>

</resources>