<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="72dp"
    android:paddingBottom="32dp"
    android:background="@drawable/gradient_background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:elevation="15dp"
        android:background="@drawable/tofi_shadow"/>

    <EditText
        android:id="@+id/etUser"
        android:layout_marginTop="72dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:inputType="text"
        android:background="@drawable/text_field"
        android:textColor="@color/textview"
        android:textSize="@dimen/subtitles"
        android:elevation="5dp"
        android:padding="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="text"
        android:background="@drawable/text_field"
        android:textColor="@color/textview"
        android:textSize="@dimen/subtitles"
        android:padding="20dp"
        android:elevation="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/buttons"
        android:text="@string/login_forgot_pw"
        android:textColor="@color/yellow"
        android:layout_marginBottom="6dp"
        android:layout_gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/tvRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/buttons"
            android:textColor="@color/text"
            android:text="@string/login_remember_pw"/>

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:buttonTint="@color/text"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="@dimen/buttonsLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/text"
        android:text="@string/register"
        android:textSize="@dimen/buttonsLogin"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_register"
        android:layout_marginBottom="32dp"/>

</LinearLayout>