<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="72dp"
    android:background="@drawable/gradient_background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="20dp"
        android:layout_height="34dp"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_back"
        android:textSize="24sp"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crea tu cuenta"
        android:layout_gravity="left"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColor="@color/text"
        android:textSize="@dimen/titlesNew"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:paddingBottom="32dp">

        <EditText
            android:id="@+id/etUser"
            android:layout_marginTop="72dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:inputType="text"
            android:background="@drawable/text_field"
            android:textColor="@color/black"
            android:textSize="@dimen/buttons"
            android:elevation="5dp"
            android:padding="20dp" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_field"
            android:textColor="@color/black"
            android:textSize="@dimen/buttons"
            android:elevation="5dp"
            android:padding="20dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:background="@drawable/text_field"
            android:textColor="@color/black"
            android:textSize="@dimen/buttons"
            android:elevation="5dp"
            android:padding="20dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_pass"
            android:inputType="textPassword"
            android:background="@drawable/text_field"
            android:textColor="@color/black"
            android:textSize="@dimen/buttons"
            android:elevation="5dp"
            android:padding="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/tvRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/buttons"
                android:textColor="@color/text"
                android:text="@string/login_remember_pw"/>

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:buttonTint="@color/text"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:textColor="@color/text"
            android:text="@string/register"
            android:textSize="@dimen/buttonsLogin"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_register"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>
</LinearLayout>